sfdx/force-app/main/default/objects/Twilio_Media__c/Twilio_Media__c.object-meta.xml
<CustomObject>
    <label>Twilio Media</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Twilio Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Medias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>