sfdx/force-app/main/default/objects/Twilio_Media__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>image/jpeg</fullName>
            </value>
            <value>
                <fullName>image/gif</fullName>
            </value>
            <value>
                <fullName>image/png</fullName>
            </value>
            <value>
                <fullName>image/bmp</fullName>
            </value>
            <value>
                <fullName>text/vcard</fullName>
            </value>
            <value>
                <fullName>text/csv</fullName>
            </value>
            <value>
                <fullName>text/rtf</fullName>
            </value>
            <value>
                <fullName>text/richtext</fullName>
            </value>
            <value>
                <fullName>text/calendar</fullName>
            </value>
            <value>
                <fullName>text/directory</fullName>
            </value>
            <value>
                <fullName>application/pdf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>