sfdx/force-app/main/default/objects/Twilio_Media__c/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>