sfdx/force-app/main/default/objects/Twilio_Media__c/fields/Twilio_Transcription__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Transcription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Twilio Transcription</label>
    <referenceTo>Twilio_Transcription__c</referenceTo>
    <relationshipLabel>Twilio Medias</relationshipLabel>
    <relationshipName>Twilio_Medias</relationshipName>
    <type>Lookup</type>
</CustomField>